crates/conduit-derive/tests/compile_fail/derive_unit_struct.rs
use conduit_derive::Encode;
#[derive(Encode)]
struct Foo;
fn main() {}
